Set citheme.css as stylesheet and display_version to False

--- a/source/_themes/sphinx_rtd_theme/theme.conf
+++ b/source/_themes/sphinx_rtd_theme/theme.conf
@@ -1,6 +1,6 @@
 [theme]
 inherit = basic
-stylesheet = css/theme.css
+stylesheet = css/citheme.css
 
 [options]
 typekit_id = hiw1hhg
@@ -8,7 +8,7 @@ analytics_id =
 sticky_navigation = False
 logo_only =
 collapse_navigation = False
-display_version = True
+display_version = False
 navigation_depth = 4
 prev_next_buttons_location = bottom
 canonical_url =
