--- a/source/_themes/sphinx_rtd_theme/theme.conf
+++ b/source/_themes/sphinx_rtd_theme/theme.conf
@@ -12,3 +12,4 @@ display_version = False
 navigation_depth = 4
 prev_next_buttons_location = bottom
 canonical_url =
+style_nav_header_background = #DD4814
