[RTD Theme] Add CI's logo

--- a/source/_themes/sphinx_rtd_theme/theme.conf
+++ b/source/_themes/sphinx_rtd_theme/theme.conf
@@ -6,7 +6,7 @@ stylesheet = css/citheme.css
 typekit_id = hiw1hhg
 analytics_id =
 sticky_navigation = False
-logo_only =
+logo_only = True
 collapse_navigation = False
 display_version = False
 navigation_depth = 4
